<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="10dp"
    tools:context=".NewSubProductActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/clDesc"
        android:layout_marginTop="20dp"
        android:layout_width="match_parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/prodDescTxt"
            android:layout_width="120dp"
            android:text="@string/prodDesc"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"/>

        <EditText
            android:id="@+id/prodDescEd"
            android:layout_width="180dp"
            android:hint="@string/prodDescEd"
            android:inputType="text"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintRight_toRightOf="parent"/>

    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/clPrice"
        android:layout_width="match_parent"
        android:layout_marginTop="20dp"
        app:layout_constraintTop_toBottomOf="@+id/clDesc"
        android:layout_height="wrap_content">

    <TextView
        android:id="@+id/prodPriceTxt"
        android:layout_width="120dp"
        android:text="@string/prodPrice"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"/>

    <EditText
        android:id="@+id/prodPriceEd"
        android:layout_width="180dp"
        android:inputType="numberDecimal"
        android:hint="@string/prodPriceEd"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_height="50dp"
        app:layout_constraintRight_toRightOf="parent"/>
    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/clImg"
        android:layout_width="match_parent"
        android:layout_marginTop="20dp"
        app:layout_constraintTop_toBottomOf="@+id/clPrice"
        android:layout_height="wrap_content">

        <LinearLayout
            app:layout_constraintTop_toTopOf="parent"
            android:id="@+id/llUploadPresc"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="10dp"
            android:layout_marginHorizontal="20dp"
            android:background="#FFFF"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/imageView"
                android:layout_width="60dp"
                android:layout_height="50dp"
                android:layout_gravity="center"
                android:src="@drawable/ic_upload_image">
            </ImageView>

            <TextView
                android:layout_marginTop="15dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginVertical="5dp"
                android:text="Attach Image"
                android:gravity="center"
                android:textSize="14sp"
                android:fontFamily="@font/opensan_regular">
            </TextView>
        </LinearLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/btnOp"
        android:layout_width="match_parent"
        android:layout_marginTop="20dp"
        app:layout_constraintTop_toBottomOf="@+id/clImg"
        android:layout_height="wrap_content">

        <Button
            android:id="@+id/cancel"
            android:background="@color/teal_200"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            android:text="@string/cancel"/>

        <Button
            android:id="@+id/submit"
            android:background="@color/teal_200"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            android:text="@string/submit"/>

    </androidx.constraintlayout.widget.ConstraintLayout>

    <Button
        android:id="@+id/back"
        android:background="@color/teal_200"
        android:layout_width="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/btnOp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:text="@string/back"/>


</androidx.constraintlayout.widget.ConstraintLayout>